refactor: resilience, Hibernate migration, and SonarQube cleanup
- Add Resilience4j circuit breakers and retries to all inter-service
  client classes across 6 services (ADR-0026): Pattern A (reads),
  Pattern B (writes), Pattern C (notifications); standard CB config
  in each service application.yml

- Wire crossing transaction (petition039) into payment-service:
  CrossingTransactionDetector + TimelineReplayService now called from
  PaymentMatchingServiceImpl; add recalculateInterest() REST endpoint
  in debt-service and matching DebtServiceClient call

- Add BatchActuatorEndpoint for manual batch job triggering;
  refactor InterestAccrualJob to use REQUIRES_NEW page-level helper
  to avoid giant single-transaction rollback on 1M+ debts

- Remove @Transactional from DeadlineMonitoringJob and
  RestanceTransitionJob execute() methods (SonarQube S2229 blockers)

- Replace deprecated Hibernate @CreationTimestamp/@UpdateTimestamp
  with @CurrentTimestamp(event=EventType.INSERT, source=SourceType.VM)
  across 18 entity files

- Replace @Autowired field injection with constructor/@Nullable
  injection in citizen-portal SecurityConfig

- Fix SonarQube issues: S1948 (ClaimRejectedException serialization),
  S2447 (null Boolean return), S6355/S1133 (@Deprecated attributes),
  S6204 (Stream.toList()), S6068 (redundant Mockito eq()), S1192
  (string literal constants), S6809 (enhanced switch), S3776
  (cognitive complexity), S3305 (SecurityConfig field injection)

- Update petitions/execution-plan.md: TB-013 (resilience) done

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>